k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsu-demo
  labels:
    app: devsu-demo
spec:
  ingressClassName: nginx
  rules:
    - host: devsu-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devsu-demo
                port:
                  number: 80
