k8s/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: devsu-demo
  labels:
    app: devsu-demo
spec:
  podSelector:
    matchLabels:
      app: devsu-demo
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 8000
